chore: hide openapi specification

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         margin: 0;
         padding: 0;
       }
+
+      .api-info p {
+        display: none;
+      }
     </style>
   </head>
   <body>
